rendering template more deeply

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -10,7 +10,10 @@
 
 <body>
   <ul>
-    <li class="file"></li>
+    <li class="file">
+      <span class="name"></span>
+      <button type="submit">Toggle watched status</button>
+    </li>
   </ul>
 </body>
 
