test setting attributes on elements

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -13,6 +13,7 @@
     <li class="file">
       <span class="name"></span>
       <button type="submit">Toggle watched status</button>
+      <a class="bar" href="foo">Some text</a>
     </li>
   </ul>
 </body>
