now returning more info from the query function

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -12,8 +12,7 @@
   <ul>
     <li class="file">
       <span class="name"></span>
-      <button type="submit">Toggle watched status</button>
-      <a class="bar" href="foo">Some text</a>
+      <a class="toggle-link" href="">Toggle watched state</a>
     </li>
   </ul>
 </body>
