--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -12,6 +12,7 @@
   <ul>
     <li class="file">
       <span class="name"></span>
+      <span class="watched"></span>
       <a class="toggle-link" href="">Toggle watched state</a>
     </li>
   </ul>
