show data in table

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <ol>
-    <li class="file">
-      <span class="name"></span>
-      <span class="watched"></span>
-      <a class="toggle-link" href="">Toggle watched state</a>
-    </li>
-  </ol>
+  <table>
+    <tr class="file">
+      <td class="name"></span>
+      <td class="watched"></span>
+      <td><a class="toggle-link" href="">Toggle watched state</a></td>
+    </tr>
+  </table>
 </body>
 
 </html>
