show description in template

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -6,6 +6,16 @@
 
 <title>Conforming XHTML 1.1 Template</title>
 
+<style>
+  table {
+    border-collapse: collapse
+}
+td {
+    border: 1px solid #000
+}
+
+</style>
+
 </head>
 
 <body>
@@ -14,6 +24,7 @@
       <td class="name"></span>
       <td class="watched"></span>
       <td><a class="toggle-link" href="">Toggle watched state</a></td>
+      <td class="description"></td>
     </tr>
   </table>
 </body>
