show scene type

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -25,6 +25,7 @@ td {
       <td class="watched"></span>
       <td><a class="toggle-link" href="">Toggle watched state</a></td>
       <td class="description"></td>
+      <td class="scene_type"></td>
     </tr>
   </table>
 </body>
