add some docs to the web app

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,28 @@
     <title>WHA?</title>
   </head>
   <body>
-    foo
+    <p>Usage:</p>
+
+    <table>
+      <tr>
+	<td>/list</td>
+	<td>list all scenes</td>
+      </tr>
+
+      <tr>
+	<td>/tag/<var>TAG-NAME</var></td>
+	<td>search by tag</td>
+      </tr>
+
+      <tr>
+	<td>/next-scene?watched=<var>WATCHED?</var></td>
+	<td>choose the next scene with watched status</td>
+      </tr>
+
+      <tr>
+	<td>/toggle-watched/<var>NAME</var></td>
+	<td>toggle watched status on scene with plaintext name</td>
+      </tr>
+    </table>      
   </body>
 </html>
