show and link existing tags

--- a/src/templates/view-tags.html
+++ b/src/templates/view-tags.html
@@ -22,7 +22,13 @@ td {
   <table>
     <tr class="file">
       <td class="name"></span>
-      <td class="tags"></td>
+      <td class="tags">
+	<ul>
+	  <li class="tag">
+	    <a href="" class="search-tag-link">blah</a>
+	  </li>
+	</ul>
+      </td>
     </tr>
   </table>
 </body>
