rename classes to not clash with bootstrap

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -32,7 +32,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="file">
+          <tr class="file_">
             <td class="name" scope="row"></span>
             <td class="watched"></span>
             <td><a class="toggle-link" href="">Toggle watched state</a></td>
