make toggle link bootstrap button

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -35,7 +35,10 @@
           <tr class="file_">
             <td class="name" scope="row"></span>
             <td class="watched"></span>
-            <td><a class="toggle-link" href="">Toggle watched state</a></td>
+            <td>
+              <a class="toggle-link btn btn-primary" role="button" href="">
+              </a>
+            </td>
             <td class="description"></td>
             <td class="scene_type"></td>
           </tr>
