add some link text

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -39,6 +39,7 @@
             <td class="scene_type"></td>
             <td>
               <a class="toggle-link btn btn-primary" role="button" href="">
+                Set watched
               </a>
             </td>
           </tr>
