adding rating support

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -25,9 +25,10 @@
         <thead>
           <tr>
             <th>Name</th>
-            <th>Watched?</th>
             <th>Description</th>
             <th>Scene Type</th>
+            <th>Watched?</th>
+            <th>Rating</th>
             <th>Toggle Link</th>
           </tr>
         </thead>
