--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -35,9 +35,10 @@
         <tbody>
           <tr class="file_">
             <td class="name" scope="row"></span>
-            <td class="watched"></span>
             <td class="description"></td>
             <td class="scene_type"></td>
+            <td class="watched"></span>
+            <td class="rating"></span>
             <td>
               <a class="toggle-link btn btn-primary" role="button" href="">
                 Set watched
