--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>DYNAMIC-TITLE</title>
+    <link href="main.css" rel="stylesheet"/>
   </head>
   <body>
-    <p>Usage:</p>
+    <h1>Sinew</h1>
+    
+    <h2>Usage</h2>
 
     <table>
       <tr>
