video link on pages

--- a/src/templates/search-result.html
+++ b/src/templates/search-result.html
@@ -29,6 +29,7 @@
             <th>Scene Type</th>
             <th>Watched?</th>
             <th>Rating</th>
+            <th>Watch Link</th>
             <th>Toggle Link</th>
           </tr>
         </thead>
@@ -39,6 +40,12 @@
             <td class="scene_type"></td>
             <td class="watched"></span>
             <td class="rating"></span>
+            <td>
+              <a class="video-link btn btn-primary" role="button" href="">
+                Watch
+              </a>
+            </td>
+
             <td>
               <a class="toggle-link btn btn-primary" role="button" href="">
                 Set watched
